--- a/app/public/home.html
+++ b/app/public/home.html
@@ -131,7 +131,7 @@
         <hr>
         <footer class="footer">
           <div class="container">
-                <p><a href="/api/friends">API Friends List</a> | <a href="https://github.com/afhaque/friendfinder">GitHub Repo</a></p>
+                <p><a href="/api/friends">API Friends List</a> | <a href="https://mchaudhr.github.io/friendFinder/">GitHub Repo</a></p>
           </div>
         </footer>
     </div>
