editing server.js

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -141,7 +141,7 @@
           <hr>
           <div>
             <p>
-              <a href="/api/friends">API Friends List</a> | <a href="https://mchaudhr.github.io/friendFinder/">GitHub Repo</a>
+              <a href="/api/friends">API Friends List</a> | <a href="https://github.com/mchaudhr/friendFinder">GitHub Repo</a>
             </p>
           </div>
         </form>
